--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <script src="main.js" type="text/javascript"></script>
     <title>Mythical Beast Profiler</title>
 </head>
 <body>
+    <div class="topnav">
+        <a href="#About">About</a>
+        <a href="#news">News</a>
+        <a href="#contact">Contact</a>
+        <a href="#Search Unicorn">Search Unicorn</a>
+        <a href="#spottedUnicorns">Spotted Unicorns</a>
+        <a class="social" href="https://www.instagram.com/mythicalbeastprofiler/" target="_blank">
+            <ion-icon class="instagram" name="logo-instagram"></ion-icon>
+        </a>
+      </div>
+    <div class="hero">
+        <h1 class="header">Mythical Beast Profiler</h1>
+    </div>
     
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
