--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="topnav">
-        <a href="#About">About</a>
+        <a href="#about">About</a>
         <a href="#news">News</a>
         <a href="#contact">Contact</a>
         <a href="#Search Unicorn">Search Unicorn</a>
