--- a/spottedUnicorn.html
+++ b/spottedUnicorn.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <script src="main.js" type="text/javascript"></script>
-    <title>Mythical Beast Profiler</title>
+    <title>Spotted Unicorns</title>
 </head>
 <body>
     <div class="topnav">
@@ -19,7 +19,7 @@
         </a>
       </div>
     <div class="hero">
-        <h1 class="header">Mythical Beast Profiler</h1>
+        <h1 class="header">Here are all spotted unicorns</h1>
     </div>
     
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
