redigering av kod
html css

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div id="wrapper">
         <header>
+            <h1>Mythical Beast Profiler</h1>
             <div class="topnav">
                 <a href="about.html">About</a>
                 <a href="news.html">News</a>
