--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="styles.css">
     <script src="main.js" type="text/javascript"></script>
     <title>Mythical Beast Profiler</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Corinthia&display=swap" rel="stylesheet">
+    <style> @import url('https://fonts.googleapis.com/css2?family=Corinthia&display=swap'); </style>
+
 </head>
 <body>
     <div id="wrapper">
@@ -28,8 +33,13 @@
 
         </header>
         <main>
-            <div class="hero">
-                <h1>Mythical Beast Profiler</h1>
+            <div class="välkommen">
+                <h2>Såg du en unicorn?</h2>
+                <p> Tror du att du såg en unicorn? Här kan du beskriva vad du har sett!</p>
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                    Här kan du beskriva vad du sett!
+                </button>
+
             </div>
 
         </main>
