--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <header>
             <h1>Mythical Beast Profiler</h1>
             <div class="topnav">
-                <a href="about.html">About</a>
+                <a href="index.html">Home</a>
                 <a href="news.html">News</a>
                 <a href="contact.html">Contact</a>
                 <a href="searchUnicorn.html">Search Unicorn</a>
@@ -36,12 +36,67 @@
             <div class="välkommen">
                 <h2>Såg du en unicorn?</h2>
                 <p> Tror du att du såg en unicorn? Här kan du beskriva vad du har sett!</p>
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-                    Här kan du beskriva vad du sett!
-                </button>
+
+                <form target="_parent">
+
+                    <button type="submit" class="btn btn-primary" formaction="searchUnicorn.html">
+                        Här kan du beskriva vad du sett!
+                    </button>
+                </form>
 
             </div>
 
+            <div class="unicorn">
+                <div class="unicorn-inläg">
+                    <div class="unicorn-picture">
+                        <img src="unicorn 1.0.jpg" alt="unicorn">
+
+                    </div>
+                    <div class="unicorn-heading">
+                        <h3>The god of Unicorns</h3>
+
+                    </div>
+                    <div class="unicorn-description">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam voluptatem ratione velit veritatis cum asperiores harum quia quis modi rem aliquam tenetur officiis, ipsum voluptatibus perferendis quidem, perspiciatis ea, repellendus esse cupiditate deserunt quaerat! Ratione aperiam facere vitae! Voluptates, obcaecati fugiat, libero tenetur harum ipsam esse expedita optio soluta corporis quidem dolore exercitationem aliquam veniam velit nihil reprehenderit assumenda illum similique? Quaerat ut amet maiores velit voluptas doloribus accusamus expedita ab architecto veritatis. Odit quas praesentium a adipisci perspiciatis officia aspernatur dolores illo. Nemo, quasi! Dolore provident asperiores beatae eveniet accusamus, dignissimos fuga quis est corporis. Aliquam voluptas sed voluptatum.</p>
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="unicorn">
+                <div class="unicorn-inläg">
+                    <div class="unicorn-picture">
+                        <img src="unicorn.jpg" alt="unicorn">
+
+                    </div>
+                    <div class="unicorn-heading">
+                        <h3>The god of Unicorns</h3>
+
+                    </div>
+                    <div class="unicorn-description">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam voluptatem ratione velit veritatis cum asperiores harum quia quis modi rem aliquam tenetur officiis, ipsum voluptatibus perferendis quidem, perspiciatis ea, repellendus esse cupiditate deserunt quaerat! Ratione aperiam facere vitae! Voluptates, obcaecati fugiat, libero tenetur harum ipsam esse expedita optio soluta corporis quidem dolore exercitationem aliquam veniam velit nihil reprehenderit assumenda illum similique? Quaerat ut amet maiores velit voluptas doloribus accusamus expedita ab architecto veritatis. Odit quas praesentium a adipisci perspiciatis officia aspernatur dolores illo. Nemo, quasi! Dolore provident asperiores beatae eveniet accusamus, dignissimos fuga quis est corporis. Aliquam voluptas sed voluptatum.</p>
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="unicorn">
+                <div class="unicorn-inläg">
+                    <div class="unicorn-picture">
+                        <img src="unicorn 1.0.jpg" alt="unicorn">
+
+                    </div>
+                    <div class="unicorn-heading">
+                        <h3>The god of Unicorns</h3>
+
+                    </div>
+                    <div class="unicorn-description">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam voluptatem ratione velit veritatis cum asperiores harum quia quis modi rem aliquam tenetur officiis, ipsum voluptatibus perferendis quidem, perspiciatis ea, repellendus esse cupiditate deserunt quaerat! Ratione aperiam facere vitae! Voluptates, obcaecati fugiat, libero tenetur harum ipsam esse expedita optio soluta corporis quidem dolore exercitationem aliquam veniam velit nihil reprehenderit assumenda illum similique? Quaerat ut amet maiores velit voluptas doloribus accusamus expedita ab architecto veritatis. Odit quas praesentium a adipisci perspiciatis officia aspernatur dolores illo. Nemo, quasi! Dolore provident asperiores beatae eveniet accusamus, dignissimos fuga quis est corporis. Aliquam voluptas sed voluptatum.</p>
+
+                    </div>
+                </div>
+            </div>
+            
         </main>
         <footer>
             <div id="container">
