--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
                                 <input type="text" id="fname" name="förnamn" placeholder="Ditt namn...">
 
                                 <label for="enamn">Efternamn</label>
-                                <input type="text" id="enamn" name="efternamn" placeholder="Ditt efternanm">
+                                <input type="text" id="enamn" name="efternamn" placeholder="Ditt efternanm...">
 
                                 <label for="country">Land</label>
                                 <select id="land" name="land">
