--- a/searchUnicorn.html
+++ b/searchUnicorn.html
@@ -35,6 +35,16 @@
                 </header>
 
                 <main>
+                    <div class="searchunicorn-form">
+                        <form action="http...." method="post">
+                            <h5>Vänligen beskriv i textrutan nedan den unicon du sett</h5>
+
+                            <label for="txtcomment">Textruta</label>
+                            <textarea id="txtcomment" name="txtcomment" placeholder="Skriv här.." style="height:200px"></textarea>
+
+                            <input type="submit" value="Hitta">
+
+                        </form>
 
                 </main>
 
