--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
                         <p>Kontakta oss genom länkade instagram ovan eller genom nedan formulär</p>
 
                         <div class="kontakt-form">
-                            <form action="mailto:example@mail.com" method="get">
+                            <form action="mailto:mythicalbeastprofile@gmail.com" method="get">
                                 <label for="fname">Förnamn</label>
                                 <input type="text" id="fname" name="förnamn" placeholder="Ditt namn...">
 
