--- a/searchUnicorn.html
+++ b/searchUnicorn.html
@@ -35,7 +35,7 @@
                 </header>
 
                 <main>
-                    <div class="searchunicorn-form">
+                    <div class="searchUnicorn-form">
 
                         <form action="http...." method="post">
 
@@ -50,30 +50,27 @@
                                 <option value="purple">Lila</option>
                                 <option value="glittery">Glittrig</option>
                                 <option value="orange">Orange</option>
-                                <option value="rosa">Rosa</option>
-                                <option value="vindröd">Vinröd</option>
-                                <option value="Pink">Pink</option>
-                                <option value="himmelsblå">Himmelsblå</option>
-                                <option value="turkos">Turkos</option>
-                                <option value="Brun">Brun</option>
-                                <option value="begie">Begie</option>
-                                <option value="grå">Grå</option>
+                                <option value="pink">Rosa</option>
+                                <option value="burgundy">Vinröd</option>
+                                <option value="pink">Pink</option>
+                                <option value="skyBlue">Himmelsblå</option>
+                                <option value="turquoise">Turkos</option>
+                                <option value="brown">Brun</option>
+                                <option value="beige">Beige</option>
+                                <option value="grey">Grå</option>
                             </select>
 
-                            <label for="fa-location">plats</label>
-                            <input type="text" id="location" name="location" placeholder="Mata in plats...">
+                            <label for="horn">Horn</label>
+                            <input type="text" id="horn" name="horn" placeholder="Beskriv hornet...">
 
-                            <label for="look">Utseende</label>
-                            <input type="text" id="look" name="look" placeholder="Hur såg hornet ut? Skriv här...">
+                            <label for="fa-longitude">Longitud</label>
+                            <input type="text" id="location" name="location" placeholder="Mata in longitud...">
 
-                            <label for="other-attributes">Övriga attribut?</label>
-                            <input type="text" id="other-attributes" name="other-attributes" placeholder="skriv här...">
+                            <label for="fa-latitude">Latitud</label>
+                            <input type="text" id="fa-latitude" name="fa-latitude" placeholder="Mata in latitud...">
 
-                            <label for="behaving">Hur betedde den sig?</label>
-                            <input type="text" id="behaving" name="behaving" placeholder="skriv här...">
-
-                            <label for="txtcomment">Kort beskrivning</label>
-                            <textarea id="txtcomment" name="txtcomment" placeholder="Behövs denna??"></textarea>
+                            <label for="behaviour">Beteende</label>
+                            <input type="text" id="behaviour" name="behaviour" placeholder="Skriv här...">
 
                             <input type="submit" value="Hitta">
 
