--- a/searchUnicorn.html
+++ b/searchUnicorn.html
@@ -73,7 +73,9 @@
                             <label for="behaviour">Beteende</label>
                             <input type="text" id="behaviour" name="behaviour" placeholder="Skriv här...">
 
-                            <input type="submit" value="Hitta">
+                            <a href="pattern.html">
+                                <input type="button" value="Hitta">
+                            </a>
 
                         </form>
 
