--- a/searchUnicorn.html
+++ b/searchUnicorn.html
@@ -79,6 +79,15 @@
 
                         </form>
 
+                    </div>
+
+                    <div class="loading">
+                        <div class="loading-search">Searching...</div>
+                        <div class="progress-bar">
+                            <div class="progress"></div>
+
+                        </div>
+                    </div>
                 </main>
 
                 <footer>
