--- a/searchUnicorn.html
+++ b/searchUnicorn.html
@@ -36,57 +36,54 @@
                 </header>
 
                 <main>
-                    <div class="searchUnicorn-form">
+                    <div class="wrapper">
 
-                        <form action="http...." method="post">
+                        <div class="searchUnicorn-form">
 
-                            <h5>Fyll i nedan förmulär för att hitta en Unicorn</h5>
+                            <form action="http...." method="post">
 
-                            <label for="color">Färg</label>
-                            <select>
-                                <option value="green">Grön</option>
-                                <option value="red">Röd</option>
-                                <option value="yellow">Gul</option>
-                                <option value="blue">Blå</option>
-                                <option value="purple">Lila</option>
-                                <option value="glittery">Glittrig</option>
-                                <option value="orange">Orange</option>
-                                <option value="pink">Rosa</option>
-                                <option value="burgundy">Vinröd</option>
-                                <option value="pink">Pink</option>
-                                <option value="skyBlue">Himmelsblå</option>
-                                <option value="turquoise">Turkos</option>
-                                <option value="brown">Brun</option>
-                                <option value="beige">Beige</option>
-                                <option value="grey">Grå</option>
-                            </select>
+                                <h5>Fyll i nedan förmulär för att hitta en Unicorn</h5>
 
-                            <label for="horn">Horn</label>
-                            <input type="text" id="horn" name="horn" placeholder="Beskriv hornet...">
+                                <label for="color">Färg</label>
+                                <select>
+                                    <option value="green">Grön</option>
+                                    <option value="red">Röd</option>
+                                    <option value="yellow">Gul</option>
+                                    <option value="blue">Blå</option>
+                                    <option value="purple">Lila</option>
+                                    <option value="glittery">Glittrig</option>
+                                    <option value="orange">Orange</option>
+                                    <option value="pink">Rosa</option>
+                                    <option value="burgundy">Vinröd</option>
+                                    <option value="pink">Pink</option>
+                                    <option value="skyBlue">Himmelsblå</option>
+                                    <option value="turquoise">Turkos</option>
+                                    <option value="brown">Brun</option>
+                                    <option value="beige">Beige</option>
+                                    <option value="grey">Grå</option>
+                                </select>
 
-                            <label for="fa-longitude">Longitud</label>
-                            <input type="text" id="location" name="location" placeholder="Mata in longitud...">
+                                <label for="horn">Horn</label>
+                                <input type="text" id="horn" name="horn" placeholder="Beskriv hornet...">
 
-                            <label for="fa-latitude">Latitud</label>
-                            <input type="text" id="fa-latitude" name="fa-latitude" placeholder="Mata in latitud...">
+                                <label for="fa-longitude">Longitud</label>
+                                <input type="text" id="location" name="location" placeholder="Mata in longitud...">
 
-                            <label for="behaviour">Beteende</label>
-                            <input type="text" id="behaviour" name="behaviour" placeholder="Skriv här...">
+                                <label for="fa-latitude">Latitud</label>
+                                <input type="text" id="fa-latitude" name="fa-latitude" placeholder="Mata in latitud...">
 
-                            <a href="pattern.html">
-                                <input type="button" value="Hitta">
-                            </a>
+                                <label for="behaviour">Beteende</label>
+                                <input type="text" id="behaviour" name="behaviour" placeholder="Skriv här...">
 
-                        </form>
+                                <a href="pattern.html">
+                                    <input type="button" value="Hitta">
+                                </a>
 
-                    </div>
+                            </form>
 
-                    <div class="loading">
-                        <div class="loading-search">Searching...</div>
-                        <div class="progress-bar">
-                            <div class="progress"></div>
 
                         </div>
+
                     </div>
                 </main>
 
