--- a/pattern.html
+++ b/pattern.html
@@ -42,7 +42,7 @@
                 <div class="container-box">
 
                     <div class="container-image">
-                        <img src="unicorn 1.0.jpg" alt="Bild hittades inte">
+                        <img src="unicorn 1.0.jpg" id="imageResult" alt="Bild hittades inte">
                         
                         <div class="icons">
                             <span> <i class="fas fa-location"></i>Skåne Sverige</span>
@@ -51,11 +51,11 @@
                     </div>
 
                     <div class="container-heading">
-                        <h3>The god of Unicorns</h3>
+                        <h3 id="unicornNameSearch">The god of Unicorns</h3>
                     </div>
 
                     <div class="container-description">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam voluptatem ratione velit veritatis cum asperiores harum quia quis modi rem aliquam tenetur officiis, ipsum voluptatibus perferendis quidem, perspiciatis ea, repellendus esse cupiditate deserunt quaerat! Ratione aperiam facere vitae! Voluptates, obcaecati fugiat, libero tenetur harum ipsam esse expedita optio soluta corporis quidem dolore exercitationem aliquam veniam velit nihil reprehenderit assumenda illum similique? Quaerat ut amet maiores velit voluptas doloribus accusamus expedita ab architecto veritatis. Odit quas praesentium a adipisci perspiciatis officia aspernatur dolores illo. Nemo, quasi! Dolore provident asperiores beatae eveniet accusamus, dignissimos fuga quis est corporis. Aliquam voluptas sed voluptatum.</p>
+                        <p id="searchDesc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam voluptatem ratione velit veritatis cum asperiores harum quia quis modi rem aliquam tenetur officiis, ipsum voluptatibus perferendis quidem, perspiciatis ea, repellendus esse cupiditate deserunt quaerat! Ratione aperiam facere vitae! Voluptates, obcaecati fugiat, libero tenetur harum ipsam esse expedita optio soluta corporis quidem dolore exercitationem aliquam veniam velit nihil reprehenderit assumenda illum similique? Quaerat ut amet maiores velit voluptas doloribus accusamus expedita ab architecto veritatis. Odit quas praesentium a adipisci perspiciatis officia aspernatur dolores illo. Nemo, quasi! Dolore provident asperiores beatae eveniet accusamus, dignissimos fuga quis est corporis. Aliquam voluptas sed voluptatum.</p>
 
                     </div>
 
