--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <script src="main.js" type="text/javascript"></script>
+    <script src="index.js" type="text/javascript"></script>
     <title>Mythical Beast Profiler</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -49,7 +49,7 @@
 
             </div>
 
-            <div class="unicorn">
+            <div class="unicorn" id="unicorn">
 
                 <div class="unicorn-inläg">
 
@@ -165,7 +165,6 @@
             </div>
 
             <div id="load-more">Load more</div>
-            <script src="main.js" type="text/javascript"></script>
             
         </main>
         <footer>
