--- a/maptest.html
+++ b/maptest.html
@@ -19,7 +19,7 @@
     <div id="map"></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="main.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCe6NFC51ZxzU0uWs6OJaUxLRGHJBlvatA&callback=initMap"
+    <script src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap"
     async defer></script>
   </body>
 </html>
