--- a/searchUnicorn.html
+++ b/searchUnicorn.html
@@ -6,7 +6,7 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <link rel="stylesheet" href="styles.css">
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-            <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCe6NFC51ZxzU0uWs6OJaUxLRGHJBlvatA&callback=initMap"
+            <script src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap"
             async defer></script>
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
             <script src="main.js" type="text/javascript"></script>
