--- a/pattern.html
+++ b/pattern.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="pattern.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <script src="main.js" type="text/javascript"></script>
+    <script src="pattern.js" type="text/javascript"></script>
     <title>Mythical Beast Profiler</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
