--- a/pattern.html
+++ b/pattern.html
@@ -61,9 +61,7 @@
 
                     <div id="add-button">
                         <p>Vill du läga till hornet i databasen?</p>
-                        <a href="index.html">
-                            <input type="button" value="LÄGG TILL">
-                        </a>
+                        <button type="submit" id="addUnicorn">LÄGG TILL</button>
 
                     </div>
 
