--- a/searchUnicorn.html
+++ b/searchUnicorn.html
@@ -6,7 +6,7 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <link rel="stylesheet" href="styles.css">
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-            <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA4QQYZ6cz3sm1BoFeK5N0b0mOKx47q4-Y&callback=initMap"
+            <script src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap"
             async defer></script>
             <script src="search.js" type="text/javascript"></script>
             <title>Mythical Beast Profiler</title>
