--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                     </div>
 
                     <div class="icons">
-                        <span> <i class="fas fa-location"></i>Skåne Sverige</span>
-                        <span> <i class="fas fa-user"></i>by admin </span>
+                        <span id="postLoc"> <i class="fas fa-location"></i>Skåne Sverige</span>
+                        <span id="postBy"> <i class="fas fa-user"></i>by admin </span>
                     </div>
 
                 </div>
