--- a/pattern.html
+++ b/pattern.html
@@ -45,8 +45,8 @@
                         <img src="unicorn 1.0.jpg" id="imageResult" alt="Bild hittades inte">
                         
                         <div class="icons">
-                            <span> <i class="fas fa-location"></i>Skåne Sverige</span>
-                            <span> <i class="fas fa-user"></i>by admin </span>
+                            <span id="location"> <i class="fas fa-location"></i>Skåne Sverige</span>
+                            <span id="byWho"> <i class="fas fa-user"></i>by admin </span>
                         </div>
                     </div>
 
