--- a/searchUnicorn.html
+++ b/searchUnicorn.html
@@ -7,7 +7,7 @@
             <link rel="stylesheet" href="styles.css">
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-            <script src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap"
+            <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA4QQYZ6cz3sm1BoFeK5N0b0mOKx47q4-Y&callback=initMap"
             async defer></script>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
             <script src="search.js" type="text/javascript"></script>
@@ -47,12 +47,10 @@
                         
                         <div class="searchUnicorn-form">
 
-                            
-
                                 <h5>Fyll i nedan förmulär för att hitta en Unicorn</h5>
 
                                 <label for="color">Färg</label>
-                                <select>
+                                <select id="selector">
                                     <option value="green">Grön</option>
                                     <option value="red">Röd</option>
                                     <option value="yellow">Gul</option>
