--- a/Main/index.html
+++ b/Main/index.html
@@ -20,10 +20,10 @@
             <h1>Mythical Beast Profiler</h1>
             <div class="topnav">
                 <a href="index.html">Home</a>
-                <a href="news.html">News</a>
-                <a href="contact.html">Contact</a>
-                <a href="searchUnicorn.html">Search Unicorn</a>
-                <a href="spottedUnicorn.html">Spotted Unicorns</a>
+                <a href="News/news.html">News</a>
+                <a href="Contact/contact.html">Contact</a>
+                <a href="Searchunicorn/searchUnicorn.html">Search Unicorn</a>
+                <a href="Spottedunicorn/spottedUnicorn.html">Spotted Unicorns</a>
                 <a class="social" href="https://www.instagram.com/mythicalbeastprofiler/" target="_blank">
                     <ion-icon class="instagram" name="logo-instagram"></ion-icon>
                 </a>
