--- a/Main/Contact/contact.html
+++ b/Main/Contact/contact.html
@@ -5,6 +5,7 @@
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <link rel="stylesheet" href="/Main/styles.css">
+            <link rel="stylesheet" href="contact.css">
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
             <script src="/Main/main.js" type="text/javascript"></script>
             <title>Mythical Beast Profiler</title>
@@ -36,7 +37,7 @@
                 </header>
 
                 <main>
-                    <div class="info-ruta">
+                    <div class="contact-container">
                         <h5>Kontakta oss 
                             <a class="social" href="https://www.instagram.com/mythicalbeastprofiler/" target="_blank">
                                 <ion-icon class="instagram" name="logo-instagram"></ion-icon>
@@ -45,7 +46,7 @@
 
                         <p>Kontakta oss genom länkade instagram ovan eller genom nedan formulär</p>
 
-                        <div class="kontakt-form">
+                        <div class="contact-form-box">
                             <form action="mailto:mythicalbeastprofile@gmail.com" method="get">
                                 <label for="fname">Förnamn</label>
                                 <input type="text" id="fname" name="förnamn" placeholder="Ditt namn...">
