--- a/Main/Searchunicorn/loader/loader.html
+++ b/Main/Searchunicorn/loader/loader.html
@@ -4,9 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/Main/styles.css">
-    <link rel="stylesheet" href="pattern.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <script src="pattern.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="loader.css">
     <title>Mythical Beast Profiler</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -37,38 +35,6 @@
         </header>
         <main>
 
-            <div class="container">
-
-                <div class="container-box">
-
-                    <div class="container-image">
-                        <img src="unicorn 1.0.jpg" id="imageResult" alt="Bild hittades inte">
-                        
-                        <div class="icons">
-                            <span> <i class="fas fa-location"></i>Skåne Sverige</span>
-                            <span> <i class="fas fa-user"></i>by admin </span>
-                        </div>
-                    </div>
-
-                    <div class="container-heading">
-                        <h3 id="unicornNameSearch">The god of Unicorns</h3>
-                    </div>
-
-                    <div class="container-description">
-                        <p id="searchDesc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam voluptatem ratione velit veritatis cum asperiores harum quia quis modi rem aliquam tenetur officiis, ipsum voluptatibus perferendis quidem, perspiciatis ea, repellendus esse cupiditate deserunt quaerat! Ratione aperiam facere vitae! Voluptates, obcaecati fugiat, libero tenetur harum ipsam esse expedita optio soluta corporis quidem dolore exercitationem aliquam veniam velit nihil reprehenderit assumenda illum similique? Quaerat ut amet maiores velit voluptas doloribus accusamus expedita ab architecto veritatis. Odit quas praesentium a adipisci perspiciatis officia aspernatur dolores illo. Nemo, quasi! Dolore provident asperiores beatae eveniet accusamus, dignissimos fuga quis est corporis. Aliquam voluptas sed voluptatum.</p>
-
-                    </div>
-
-                    <div id="add-button">
-                        <p>Vill du läga till hornet i databasen?</p>
-                        <button type="submit" id="addUnicorn">LÄGG TILL</button>
-
-                    </div>
-
-
-                </div>
-            </div>
-            
         </main>
         <footer>
             <div id="container">
@@ -76,8 +42,8 @@
                 <div class="topnav">
                     <h4>About</h4>
                     <a href="about.html">Om Mythical Beast Profiler</a>
-                    <a href="contact.html">Kontakta oss</a>
-                    <a href="spottedUnicorn.html">Inspiration</a>
+                    <a href="/Main/Contact/contact.html">Kontakta oss</a>
+                    <a href="/Main/Spottedunicorn/spottedUnicorn.html">Inspiration</a>
                     <a class="social" href="https://www.instagram.com/mythicalbeastprofiler/" target="_blank">
                         <ion-icon class="instagram" name="logo-instagram"></ion-icon>
                     </a>
@@ -86,6 +52,12 @@
             </div>
 
         </footer>
+
+        <div class="center">
+            <div class="ring"></div>
+            <span>Letar...</span>
+
+        </div>
     </div>
 </body>
 </html>
