--- a/Main/index.html
+++ b/Main/index.html
@@ -33,6 +33,8 @@
                 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
             </div>
 
+            <img src="icons8-menu-48.png" alt="hamburger-menu" class="hamburger-menu">
+
         </header>
         <main>
             <div class="välkommen">
