--- a/Main/Searchunicorn/Pattern/pattern.html
+++ b/Main/Searchunicorn/Pattern/pattern.html
@@ -42,7 +42,7 @@
                 <div class="container-box">
 
                     <div class="container-image">
-                        <img src="unicorn 1.0.jpg" id="imageResult" alt="Bild hittades inte">
+                        <img src="" id="imageResult" alt="Bild hittades inte">
                         
                         <div class="icons">
                             <span id="location"> <i class="fas fa-location"></i>Skåne Sverige</span>
