--- a/Main/Spottedunicorn/Specificunicorn/specificUnicorn.html
+++ b/Main/Spottedunicorn/Specificunicorn/specificUnicorn.html
@@ -4,9 +4,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/Main/styles.css">
-    <link rel="stylesheet" href="pattern.css">
+    <link rel="stylesheet" href="specificUnicorn.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <script src="pattern.js" type="text/javascript"></script>
+    <script src="specificUnicorn.js" type="text/javascript"></script>
     <title>Mythical Beast Profiler</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -37,7 +37,7 @@
         </header>
         <main>
 
-            <div class="container">
+            <div id="cont" class="container">
 
                 <div class="container-box">
 
@@ -60,7 +60,7 @@
                     </div>
 
                     <div id="add-button">
-                        <p>Vill du läga till enhörningen i databasen?</p>
+                        <p>Vill du se fler bilder?</p>
                         <button type="submit" id="addUnicorn">LÄGG TILL</button>
 
                     </div>
