--- a/Main/index.html
+++ b/Main/index.html
@@ -44,7 +44,7 @@
 
                 <form target="_parent">
 
-                    <button type="submit" class="btn btn-primary" formaction="searchUnicorn.html">
+                    <button type="submit" class="btn btn-primary" formaction="/Main/Searchunicorn/searchUnicorn.html">
                         Här kan du beskriva vad du sett!
                     </button>
                 </form>
