--- a/Main/Spottedunicorn/Specificunicorn/specificUnicorn.html
+++ b/Main/Spottedunicorn/Specificunicorn/specificUnicorn.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/Main/styles.css">
     <link rel="stylesheet" href="specificUnicorn.css">
+    <link rel="stylesheet" href="/Main/Searchunicorn/Loader/loader.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="specificUnicorn.js" type="text/javascript"></script>
     <title>Mythical Beast Profiler</title>
@@ -61,7 +62,7 @@
 
                     <div id="add-button">
                         <p>Vill du se fler bilder?</p>
-                        <button type="submit" id="addUnicorn">LÄGG TILL</button>
+                        <button type="submit" id="addUnicorn">Klicka här</button>
 
                     </div>
 
