--- a/Main/Spottedunicorn/Specificunicorn/specificUnicorn.html
+++ b/Main/Spottedunicorn/Specificunicorn/specificUnicorn.html
@@ -42,7 +42,7 @@
                 <div class="container-box">
 
                     <div class="container-image">
-                        <img src="" id="imageResult" alt="Bild hittades inte">
+                        <img src="" id="imageResult" alt="Image not found">
                         
                         <div class="icons">
                             <span id="location"> <i class="fas fa-location"></i></span>
@@ -64,7 +64,10 @@
                         <button type="submit" id="addUnicorn">LÄGG TILL</button>
 
                     </div>
+                </div>
 
+                <div class="container-images">
+                    <img src="" alt="Image not found">
 
                 </div>
             </div>
