--- a/Main/index.html
+++ b/Main/index.html
@@ -17,13 +17,13 @@
 <body>
     <div id="wrapper">
         <header>
-            <h1>Mythical Beast Profiler</h1>
+            <img src="/Main/MBP-logo.svg">
             <div class="topnav">
-                <a href="index.html">Home</a>
-                <a href="News/news.html">News</a>
-                <a href="Contact/contact.html">Contact</a>
-                <a href="Searchunicorn/searchUnicorn.html">Search Unicorn</a>
-                <a href="Spottedunicorn/spottedUnicorn.html">Spotted Unicorns</a>
+                <a href="index.html">Start</a>
+                <a href="News/news.html">Nyheter</a>
+                <a href="Contact/contact.html">Kontakt</a>
+                <a href="Searchunicorn/searchUnicorn.html">Sök enhörning</a>
+                <a href="Spottedunicorn/spottedUnicorn.html">Upptäckta enhörningar</a>
                 <a class="social" href="https://www.instagram.com/mythicalbeastprofiler/" target="_blank">
                     <ion-icon class="instagram" name="logo-instagram"></ion-icon>
                 </a>
@@ -38,14 +38,14 @@
         </header>
         <main>
             <div class="välkommen">
-                <h2>Välkommen!</h2>
-                <p>Här kan du läsa om hittade Unicorns, men även söka och lägga till Unicorns.</p>
-                <p> Tror du att du såg en unicorn? Här kan du beskriva vad du har sett!</p>
+                <h2>Allt för enhörningsfantaster!</h2>
+                <p>Här kan du skumma igenom våra fantastiska enhörningar och glömma bort tiden!</p>
+                <p>Har du kanske sett en enhörning vandra på savannen, rånat banken eller flyga bland norrskenet. Beskriv det du sett och få information direkt!</p>
 
                 <form target="_parent">
 
                     <button type="submit" class="btn btn-primary" formaction="/Main/Searchunicorn/searchUnicorn.html">
-                        Här kan du beskriva vad du sett!
+                        Beskriv enhörningen du sett!
                     </button>
                 </form>
 
@@ -61,10 +61,9 @@
             <div id="container">
                 
                 <div class="topnav">
-                    <h4>About</h4>
-                    <a href="about.html">Om Mythical Beast Profiler</a>
-                    <a href="contact.html">Kontakta oss</a>
-                    <a href="spottedUnicorn.html">Inspiration</a>
+                    <h4>Om</h4>
+                    <a href="/Main/Contact/contact.html">Kontakta oss</a>
+                    <a href="/Main/Spottedunicorn/spottedUnicorn.html">Inspiration</a>
                     <a class="social" href="https://www.instagram.com/mythicalbeastprofiler/" target="_blank">
                         <ion-icon class="instagram" name="logo-instagram"></ion-icon>
                     </a>
