--- a/Main/Searchunicorn/Pattern/pattern.html
+++ b/Main/Searchunicorn/Pattern/pattern.html
@@ -8,17 +8,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="pattern.js" type="text/javascript"></script>
     <title>Mythical Beast Profiler</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Corinthia&display=swap" rel="stylesheet">
-    <style> @import url('https://fonts.googleapis.com/css2?family=Corinthia&display=swap'); </style>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <style> @import url('https://fonts.googleapis.com/css2?family=Signika+Negative&display=swap'); </style>
 
 </head>
 <body>
     <div id="wrapper">
         <header>
-            <img src="/Main/MBP-logo.svg">
+            <img id="logo" src="/Main/MBP-logo.svg">
             <div class="topnav">
                 <a href="/Main/index.html">Start</a>
                 <a href="/Main/News/news.html">Nyheter</a>
