--- a/Main/Searchunicorn/loader/loader.html
+++ b/Main/Searchunicorn/loader/loader.html
@@ -6,11 +6,7 @@
     <link rel="stylesheet" href="/Main/styles.css">
     <link rel="stylesheet" href="loader.css">
     <title>Mythical Beast Profiler</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Corinthia&display=swap" rel="stylesheet">
-    <style> @import url('https://fonts.googleapis.com/css2?family=Corinthia&display=swap'); </style>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <style> @import url('https://fonts.googleapis.com/css2?family=Signika+Negative&display=swap'); </style>
 
 </head>
 <body>
