--- a/Main/Searchunicorn/searchUnicorn.html
+++ b/Main/Searchunicorn/searchUnicorn.html
@@ -11,16 +11,13 @@
         async defer></script>
         <script src="/Main/Searchunicorn/search.js" type="text/javascript"></script>
         <title>Mythical Beast Profiler</title>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Corinthia&display=swap" rel="stylesheet">
-        <style> @import url('https://fonts.googleapis.com/css2?family=Corinthia&display=swap'); </style>
+        <style> @import url('https://fonts.googleapis.com/css2?family=Signika+Negative&display=swap'); </style>
         
     </head>
     <body>
         <div id="wrapper">
             <header>
-                <img src="/Main/MBP-logo.svg">
+                <img id="logo" src="/Main/MBP-logo.svg">
                 <div class="topnav">
                     <a href="/Main/index.html">Start</a>
                     <a href="/Main/News/news.html">Nyheter</a>
