--- a/Main/index.html
+++ b/Main/index.html
@@ -3,21 +3,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="index.js" type="text/javascript"></script>
     <title>Mythical Beast Profiler</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Corinthia&display=swap" rel="stylesheet">
-    <style> @import url('https://fonts.googleapis.com/css2?family=Corinthia&display=swap'); </style>
+    <style> @import url('https://fonts.googleapis.com/css2?family=Signika+Negative&display=swap'); </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <link rel="stylesheet" href="styles.css">
 
 </head>
 <body>
     <div id="wrapper">
         <header>
-            <img src="/Main/MBP-logo.svg">
+            <img id="logo" src="/Main/MBP-logo.svg">
             <div class="topnav">
                 <a href="index.html">Start</a>
                 <a href="News/news.html">Nyheter</a>
@@ -40,12 +37,12 @@
             <div class="välkommen">
                 <h2>Allt för enhörningsfantaster!</h2>
                 <p>Här kan du skumma igenom våra fantastiska enhörningar och glömma bort tiden!</p>
-                <p>Har du kanske sett en enhörning vandra på savannen, rånat banken eller flyga bland norrskenet. Beskriv det du sett och få information direkt!</p>
+                <p>Har du kanske sett en enhörning vandra på savannen, rånat en bank eller flugit högt bland molnen. Beskriv det du sett i vår sökfunktion och ta reda på vilken av världens alla enhörningar du såg!</p>
 
                 <form target="_parent">
 
                     <button type="submit" class="btn btn-primary" formaction="/Main/Searchunicorn/searchUnicorn.html">
-                        Beskriv enhörningen du sett!
+                        Sök
                     </button>
                 </form>
 
