--- a/Main/index.html
+++ b/Main/index.html
@@ -30,7 +30,8 @@
                 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
             </div>
 
-            <img src="icons8-menu-48.png" alt="hamburger-menu" class="hamburger-menu">
+            <img src="/Main/PNG/menu-icon.png" alt="hamburger-menu" class="hamburger-menu">
+            <img src="/Main/PNG/cross-icon.png" alt="cross-icon" class="cross-icon">
 
         </header>
         <main>
