--- a/Main/Contact/contact.html
+++ b/Main/Contact/contact.html
@@ -6,6 +6,7 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <link rel="stylesheet" href="/Main/styles.css">
             <link rel="stylesheet" href="contact.css">
+            <script src="/Main/mediaqueries.js" type="text/javascript"></script>
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
             <script src="contact.js" type="text/javascript"></script>
             <title>Mythical Beast Profiler</title>
@@ -30,6 +31,9 @@
                         <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
                         <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
                     </div>
+
+                    <img src="/Main/PNG/menu-icon.png" alt="hamburger-menu" class="hamburger-menu">
+                    <img src="/Main/PNG/cross-icon.png" alt="cross-icon" class="cross-icon">
         
                 </header>
 
