--- a/Main/Searchunicorn/loader/loader.html
+++ b/Main/Searchunicorn/loader/loader.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/Main/styles.css">
     <link rel="stylesheet" href="loader.css">
+    <script src="/Main/mediaqueries.js" type="text/javascript"></script>
     <title>Mythical Beast Profiler</title>
     <style> @import url('https://fonts.googleapis.com/css2?family=Signika+Negative&display=swap'); </style>
 
@@ -27,6 +28,9 @@
                 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
                 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
             </div>
+
+            <img src="/Main/PNG/menu-icon.png" alt="hamburger-menu" class="hamburger-menu">
+            <img src="/Main/PNG/cross-icon.png" alt="cross-icon" class="cross-icon">
 
         </header>
         <main>
