--- a/Main/Spottedunicorn/Specificunicorn/specificUnicorn.html
+++ b/Main/Spottedunicorn/Specificunicorn/specificUnicorn.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/Main/Searchunicorn/Loader/loader.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="specificUnicorn.js" type="text/javascript"></script>
+    <script src="/Main/mediaqueries.js" type="text/javascript"></script>
     <title>Mythical Beast Profiler</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,6 +35,9 @@
                 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
                 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
             </div>
+
+            <img src="/Main/PNG/menu-icon.png" alt="hamburger-menu" class="hamburger-menu">
+            <img src="/Main/PNG/cross-icon.png" alt="cross-icon" class="cross-icon">
 
         </header>
         <main>
