--- a/Main/index.html
+++ b/Main/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="index.js" type="text/javascript"></script>
+    <script src="/Main/mediaqueries.js" type="text/javascript"></script>
     <title>Mythical Beast Profiler</title>
     <style> @import url('https://fonts.googleapis.com/css2?family=Signika+Negative&display=swap'); </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
