logo in specific

--- a/Main/Spottedunicorn/Specificunicorn/specificUnicorn.html
+++ b/Main/Spottedunicorn/Specificunicorn/specificUnicorn.html
@@ -20,7 +20,7 @@
 <body>
     <div id="wrapper">
         <header>
-            <img src="/Main/MBP-logo.svg">
+            <img id="logo" src="/Main/MBP-logo.svg">
             <div class="topnav">
                 <a href="/Main/index.html">Start</a>
                 <a href="/Main/News/news.html">Nyheter</a>
