--- a/Main/Spottedunicorn/spottedUnicorn.html
+++ b/Main/Spottedunicorn/spottedUnicorn.html
@@ -42,9 +42,7 @@
                         <h3>Fantastiska enhörningar!</h3>
                         <h4>Här hittar du alla upptäckta enhörningar!</h4>
                     </div>
-
-                    <div id="unicorn-container"></div>
-        
+                    <div class="unicorn" id="unicorn-container"></div>
                     <div id="load-more">Ladda in fler</div>
                     
 
