--- a/Main/index.html
+++ b/Main/index.html
@@ -49,12 +49,7 @@
                 </form>
 
             </div>
-
-            <div class="unicorn" id="unicorn">
-
-                
-            </div>
-            
+            <div class="unicorn" id="unicorn"></div>
         </main>
         <footer>
             <div id="container">
