--- a/Main/Spottedunicorn/spottedUnicorn.html
+++ b/Main/Spottedunicorn/spottedUnicorn.html
@@ -40,8 +40,8 @@
                 <main>
                     
                     <div id="spotted-unicorn-header">
-                        <h3>Fantastiska enhörningar!</h3>
-                        <h4>Här hittar du alla upptäckta enhörningar!</h4>
+                        <h2>Fantastiska enhörningar!</h2>
+                        <p>Här hittar du alla upptäckta enhörningar!</p>
                     </div>
 
                     <div id="unicorn-container"></div>
