--- a/Main/Searchunicorn/Pattern/pattern.html
+++ b/Main/Searchunicorn/Pattern/pattern.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/Main/styles.css">
-    <link rel="stylesheet" href="pattern.css">
+    <link rel="stylesheet" href="/Main/Spottedunicorn/Specificunicorn/specificUnicorn.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="pattern.js" type="text/javascript"></script>
     <script src="/Main/mediaqueries.js" type="text/javascript"></script>
@@ -61,7 +61,7 @@
 
                     <div id="add-button">
                         <p>Vill du dela din upptäckt med andra?</p>
-                        <button type="submit" id="addUnicorn">LÄGG TILL</button>
+                        <button type="submit" id="addUnicorn">Lägg till</button>
 
                     </div>
 
