--- a/Main/Spottedunicorn/spottedUnicorn.html
+++ b/Main/Spottedunicorn/spottedUnicorn.html
@@ -46,7 +46,7 @@
 
                     <div id="unicorn-container"></div>
         
-                    <button id="load-more" type="submit">Lägg in fler</button>
+                    <button id="load-more" type="submit">Ladda in fler</button>
                     
 
                 </main>
