--- a/Main/Spottedunicorn/Specificunicorn/specificUnicorn.html
+++ b/Main/Spottedunicorn/Specificunicorn/specificUnicorn.html
@@ -10,12 +10,8 @@
     <script src="specificUnicorn.js" type="text/javascript"></script>
     <script src="/Main/mediaqueries.js" type="text/javascript"></script>
     <title>Mythical Beast Profiler</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Corinthia&display=swap" rel="stylesheet">
-    <style> @import url('https://fonts.googleapis.com/css2?family=Corinthia&display=swap'); </style>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-
+    <style> @import url('https://fonts.googleapis.com/css2?family=Signika+Negative&display=swap'); </style>
+    
 </head>
 <body>
     <div id="wrapper">
