--- a/Main/Searchunicorn/searchUnicorn.html
+++ b/Main/Searchunicorn/searchUnicorn.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="/Main/styles.css">
         <link rel="stylesheet" href="Searchunicorn.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA4QQYZ6cz3sm1BoFeK5N0b0mOKx47q4-Y&callback=initMap"
+        <script src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap"
         async defer></script>
         <script src="/Main/Searchunicorn/search.js" type="text/javascript"></script>
         <script src="/Main/mediaqueries.js" type="text/javascript"></script>
